version 2.6.3
-------------

 - Send simulation output to stderr
 - Remove normal output of launcher
 - Distinguishes symlinks and allow to follow it or not

version 2.6.2
-------------

 - New logo
 - Use /run instead of /var/run
 - Add export of path types
 - Updated tests and reports
 - Fix install of systemd files

Version 2.6.1
-------------

 - Fix one letter options of the daemon
 - Fix plug control of duplicates
 - Cleanup of server for coverage tests
 - Cleanup of client at exit
 - Rework of setting smack extended attributes in simulation
 - Enforce smack extended attributes

Version 2.6.0
-------------

 - Add path normalization to ensure unicity
 - enforce paths to be absolute

Version 2.5.0
-------------

 - Major refactor with improvements
 - Disconnect on too big input
 - New client API for display
 - Fix broken state and disconnection
 - Improves test, add fuzzing

Version 2.4.1
-------------

 - Fix Smack template
 - Normalized error reports
 - Rewrite of 'display' using visitor
 - Fix lengths processing
 - Fix validation of arguments of protocol
 - Validate utf8 strings

Version 2.4.0
-------------

 - Print the released version when asked
 - No more default user and group, set it explicitely in command line
 - Fix setting of group and supplementary groups
 - Break connection on protocol violation
 - Add path type 'default'
 - Remove smack labels for path type default
 - Implement installation of any application
 - Add plug mechanism with cynagora check (for Smack only)
 - Add path type 'plug'
 - Refactor of tests
 - Allow empty lines in protocol
